style+fix: Adicionada propriedade overflow-hidden ao body quando aberta pop up de login. Novas implementações para otimizar a organização das informações na profile page

--- a/gamp-recipes/app/custom-styles.css
+++ b/gamp-recipes/app/custom-styles.css
@@ -21,3 +21,12 @@
     pointer-events: none;
     transition: opacity 0.3s ease;
 }
+
+.active-profile-icon {
+    width: 2rem;
+}
+
+.inactive-profile-icon {
+    width: 1.8rem;
+    opacity: 40%;
+}
